--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.703.0",
@@ -29,7 +30,7 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.2.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
@@ -78,7 +79,7 @@
     "@types/methods": "^1.1.4",
     "@types/mime": "^3.0.4",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20.17.10",
+    "@types/node": "^20.17.12",
     "@types/qs": "^6.9.17",
     "@types/range-parser": "^1.2.7",
     "@types/send": "^0.17.4",
@@ -102,7 +103,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
