--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
         "rootDir": ".",
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "types": ["node", "jest"]
+        "types": [
+            "node",
+            "jest"
+        ]
     },
     "include": [
         "src/**/*",
