--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^6.2.1",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.8",
